# ibm-workshop

./: .bobignore  .cursorignore  .env  .gitignore  AGENTS.md  README.md  pyproject.toml  pyrightconfig.json  ruff.toml  skills-lock.json
.agents/skills/workshop-data/: SKILL.md
.agents/skills/workshop-data/references/: cursor-rule.mdc
.agents/skills/workshop-submit-private/: SKILL.md
.bob/skills/workshop-data/: SKILL.md
.bob/skills/workshop-data/references/: cursor-rule.mdc
.bob/skills/workshop-evaluate-test/: SKILL.md
.bob/skills/workshop-submit-private/: SKILL.md
audit/: 01_baseline.py
data/: public.csv  split_meta.json
data/eda/: eda.md  eda.py  eda_public.html
data/private/: features.csv  labels.csv
data/test/: labels.csv
experiments/: 01_baseline.py
journal/: 01_baseline.md  JOURNAL.md
src/ibm_workshop/: __init__.py  data.py  evaluate.py  features.py  learners.py  pipeline.py  submission.py
tests/smoke/: test_01_baseline.py
